- added Domain project with entities - added Infrastructure project with db context and initial migration

--- a/BookingService.Api/BookingService.Api.csproj
+++ b/BookingService.Api/BookingService.Api.csproj
@@ -4,5 +4,10 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BookingService.Domain\BookingService.Domain.csproj" />
+    <ProjectReference Include="..\BookingService.Infrastructure\BookingService.Infrastructure.csproj" />
+  </ItemGroup>
+
 
 </Project>
