--- a/BookingService.Api/appsettings.Development.json
+++ b/BookingService.Api/appsettings.Development.json
@@ -5,5 +5,7 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "BookingServiceContext": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=BookingServiceContext;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+
 }
