- added User db table - added UserRepository

--- a/BookingService.Api/BookingService.Api.csproj
+++ b/BookingService.Api/BookingService.Api.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.28" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\BookingService.Domain\BookingService.Domain.csproj" />
     <ProjectReference Include="..\BookingService.Infrastructure\BookingService.Infrastructure.csproj" />
   </ItemGroup>
