--- a/BookingService.Api/appsettings.Development.json
+++ b/BookingService.Api/appsettings.Development.json
@@ -6,6 +6,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "BookingServiceContext": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=BookingServiceContext;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
-
+  "BookingServiceContext": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=BookingServiceContext;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+  "AuthSecret": "50ed142385ac151546543880e3b14c9a630bdcd1"
 }
