--- a/BookingService.Infrastructure/BookingService.Infrastructure.csproj
+++ b/BookingService.Infrastructure/BookingService.Infrastructure.csproj
@@ -5,6 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20220914023858_AddReservationsToUser.cs" />
+    <Compile Remove="Migrations\20220914023858_AddReservationsToUser.Designer.cs" />
+    <Compile Remove="Migrations\20220914024154_AddReservationsToUser.cs" />
+    <Compile Remove="Migrations\20220914024154_AddReservationsToUser.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.28" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.28">
       <PrivateAssets></PrivateAssets>
