--- a/BookingService.Infrastructure/BookingService.Infrastructure.csproj
+++ b/BookingService.Infrastructure/BookingService.Infrastructure.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -25,12 +25,6 @@
       <PrivateAssets></PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\BookingService.Domain\BookingService.Domain.csproj">
-      <PrivateAssets>All</PrivateAssets>
-    </ProjectReference>
   </ItemGroup>
 
 </Project>
